project-2/project-2/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exam-app
  labels:
    app: exam-app
